--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ nav {
   list-style-type: none;
   postition: fixed;
   background-color: #808f87;
+  border-radius: 90px;
   width: 100vw;
   top: 0;
   left: 0;
@@ -24,5 +25,13 @@ nav {
 li {
   display: inline;
   padding: 50px;
+  color: #e2efde;
+}
+a:hover {
+  background-color: #afd0bf;
+  border-radius: 5px;
+}
+a {
+  text-decoration: none;
   color: #e2efde;
 }
