--- a/style.css
+++ b/style.css
@@ -35,3 +35,8 @@ a {
   text-decoration: none;
   color: #e2efde;
 }
+h2{
+  font-size:40px;
+  text-decoration-line:underline;
+  text-decoration-thickness:2px;
+}
